--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "yiisoft/yii2-authclient": "^2.0",
         "bower-asset/bootswatch": "*",
         "bower-asset/select2": "^4.0",
-        "rmrevin/yii2-fontawesome": "2.10.*"
+        "rmrevin/yii2-fontawesome": "2.10.*",
+        "bower-asset/highcharts": "^4.2"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
