--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "bower-asset/select2": "^4.0",
         "rmrevin/yii2-fontawesome": "2.10.*",
         "bower-asset/highcharts": "^4.2",
-        "bower-asset/selectize": "^0.12.1"
+        "bower-asset/selectize": "^0.12.1",
+        "fxp/composer-asset-plugin": "^1.1"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
