--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "rmrevin/yii2-fontawesome": "2.10.*",
         "bower-asset/highcharts": "^4.2",
         "bower-asset/selectize": "^0.12.1",
-        "fxp/composer-asset-plugin": "^1.1"
+        "fxp/composer-asset-plugin": "^1.1",
+        "ext-gd": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
